--- a/index.html
+++ b/index.html
@@ -409,28 +409,54 @@ User's Request: "${userRequest}"
 
 Generate the Google Dork:`;
 
-          try {
-              const payload = { contents: [{ role: "user", parts: [{ text: prompt }] }] };
-              const apiKey = ""; 
-              const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
-              const response = await fetch(apiUrl, {
-                  method: 'POST',
-                  headers: { 'Content-Type': 'application/json' },
-                  body: JSON.stringify(payload)
-              });
-              if (!response.ok) throw new Error(`API request failed: ${response.status}`);
-              const result = await response.json();
-              const generatedDork = result.candidates[0].content.parts[0].text.trim();
-              aiResultContainer.classList.remove('hidden');
-              typeEffect(aiDorkOutput, generatedDork, 30);
-          } catch (error) {
-              console.error("Error generating AI dork:", error);
-              aiDorkOutput.textContent = 'ERROR: Could not generate dork.';
-              aiResultContainer.classList.remove('hidden');
-          } finally {
-              generateAiDorkBtn.disabled = false;
-              aiLoadingMessage.classList.add('hidden');
+          const maxRetries = 3;
+          for (let attempt = 0; attempt < maxRetries; attempt++) {
+              try {
+                  const payload = { contents: [{ role: "user", parts: [{ text: prompt }] }] };
+                  const apiKey = ""; 
+                  const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
+                  
+                  const response = await fetch(apiUrl, {
+                      method: 'POST',
+                      headers: { 'Content-Type': 'application/json' },
+                      body: JSON.stringify(payload)
+                  });
+
+                  if (!response.ok) {
+                      if (response.status >= 400 && response.status < 500) {
+                          console.error(`Client error: ${response.status}. Not retrying.`);
+                          throw new Error(`API request failed with status ${response.status}`);
+                      }
+                      throw new Error(`API request failed with server error: ${response.status}`);
+                  }
+
+                  const result = await response.json();
+
+                  if (result.candidates && result.candidates[0].content && result.candidates[0].content.parts && result.candidates[0].content.parts.length > 0) {
+                      const generatedDork = result.candidates[0].content.parts[0].text.trim();
+                      aiResultContainer.classList.remove('hidden');
+                      typeEffect(aiDorkOutput, generatedDork, 30);
+                      generateAiDorkBtn.disabled = false;
+                      aiLoadingMessage.classList.add('hidden');
+                      return; 
+                  } else {
+                      throw new Error('Invalid response structure from API.');
+                  }
+
+              } catch (error) {
+                  console.error(`Attempt ${attempt + 1} failed:`, error.message);
+                  if (attempt + 1 >= maxRetries) {
+                      aiDorkOutput.textContent = 'ERROR: AI service unavailable. Please try again later.';
+                      aiResultContainer.classList.remove('hidden');
+                  } else {
+                      const delay = Math.pow(2, attempt) * 1000;
+                      await new Promise(res => setTimeout(res, delay));
+                  }
+              }
           }
+          
+          generateAiDorkBtn.disabled = false;
+          aiLoadingMessage.classList.add('hidden');
       };
 
       generateAiDorkBtn.addEventListener('click', generateAiDork);
