--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Google Dorker for Bug Bounty</title>
+  <title>Dorky for Bug Bounty</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <!-- Font Awesome for Live2D widget icons -->
@@ -159,13 +159,24 @@
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
         gap: 1rem;
     }
+    
+    @keyframes shake-error-animation {
+      10%, 90% { transform: translateX(-1px); }
+      20%, 80% { transform: translateX(2px); }
+      30%, 50%, 70% { transform: translateX(-4px); }
+      40%, 60% { transform: translateX(4px); }
+    }
+
+    .shake-error {
+      animation: shake-error-animation 0.82s cubic-bezier(.36,.07,.19,.97) both;
+    }
   </style>
 </head>
 <body class="bg-gray-900 text-gray-200">
 
   <div class="container mx-auto px-4 py-8 md:py-12">
     <header class="text-center mb-10">
-      <h1 class="glitch" data-text="Google Dorker">Google Dorker</h1>
+      <h1 class="glitch" data-text="Dorky">Dorky</h1>
       <p class="text-cyan-400 mt-4 text-lg">[ Advanced Search Assistant ]</p>
     </header>
 
@@ -175,7 +186,7 @@
         <div> <!-- This extra div is for the corner brackets -->
             <label for="targetDomain" class="block text-lg font-medium text-cyan-400 mb-2">// Enter Target:</label>
             <div class="flex flex-col sm:flex-row gap-4">
-              <input type="text" id="targetDomain" placeholder="site:example.com" class="w-full px-4 py-3 hacker-input rounded-md" />
+              <input type="text" id="targetDomain" placeholder="Enter Domain or Company Name" class="w-full px-4 py-3 hacker-input rounded-md" />
               <button id="clearDomain" class="bg-red-600/50 hover:bg-red-700 text-white font-bold py-3 px-6 rounded-md hacker-btn border-red-500">Clear</button>
             </div>
             <p id="error-message" class="text-red-400 mt-2 hidden"></p>
@@ -318,12 +329,21 @@
       const searchAiDorkBtn = document.getElementById('search-ai-dork');
       const aiLoadingMessage = document.getElementById('ai-loading-message');
 
+      const handleMissingTarget = () => {
+          errorMessage.textContent = 'ERROR: Target Domain or Company Name required.';
+          errorMessage.classList.remove('hidden');
+          targetDomainInput.scrollIntoView({ behavior: 'smooth', block: 'center' });
+          targetDomainInput.classList.add('shake-error');
+          setTimeout(() => {
+              targetDomainInput.classList.remove('shake-error');
+          }, 820); // Duration of the shake animation
+      };
+
       const executeDork = (event) => {
         if (event.target.classList.contains('copy-btn')) return;
         const domain = targetDomainInput.value.trim();
         if (!domain) {
-          errorMessage.textContent = 'ERROR: Target domain required.';
-          errorMessage.classList.remove('hidden');
+          handleMissingTarget();
           return;
         }
         errorMessage.classList.add('hidden');
@@ -338,8 +358,7 @@
       const copyDork = (copyBtn) => {
         const domain = targetDomainInput.value.trim();
         if (!domain) {
-          errorMessage.textContent = 'ERROR: Target domain required.';
-          errorMessage.classList.remove('hidden');
+          handleMissingTarget();
           return;
         }
         errorMessage.classList.add('hidden');
@@ -400,8 +419,10 @@
           const domain = targetDomainInput.value.trim();
           const userRequest = aiPromptInput.value.trim();
           if (!domain || !userRequest) {
-              errorMessage.textContent = 'ERROR: Target domain and request required for AI.';
-              errorMessage.classList.remove('hidden');
+              handleMissingTarget();
+              if (domain && !userRequest) {
+                  errorMessage.textContent = 'ERROR: AI request description is missing.';
+              }
               return;
           }
           generateAiDorkBtn.disabled = true;
@@ -413,11 +434,11 @@
 Rules:
 - The output must be ONLY the dork query itself.
 - Do not include any explanations, introductory text, or markdown formatting like \`\`\`.
-- The dork must be tailored to the user's request and the specified target domain.
+- The dork must be tailored to the user's request and the specified target. The target can be a domain or a company name.
 - Use advanced operators like site:, inurl:, intitle:, filetype:, ext:, etc., where appropriate.
 - If the user asks for something general like "vulnerabilities", create a dork for a common, high-impact finding like exposed config files or sensitive documents.
 
-Target Domain: "${domain}"
+Target: "${domain}"
 User's Request: "${userRequest}"
 
 Generate the Google Dork:`;
